<resources>
    <string name="app_name">VirtualXposed</string>
    <string name="vxp">VirtualXposed</string>
    <string name="wait">Please wait…</string>
    <string name="desktop">Desktop</string>
    <string name="add_app">Add App</string>
    <string name="preparing">Opening app…</string>
    <string name="delete">Delete</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="new_user">New User</string>
    <string name="enable">Enable</string>
    <string name="save">Save</string>
    <string name="save_success">Save successful!</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="fake_device_info">Fake Device Info</string>
    <string name="wifi_status">Wifi Status</string>
    <string name="config_device_info">Device Info</string>
    <string name="about">About</string>
    <string name="clone_apps">Clone Apps</string>
    <string name="external_storage">External Storage</string>
    <string name="install_d">Install (%d)</string>
    <string name="install_too_much_once_time">You may choose no more than 9 apps at once!</string>
    <string name="versionchecklib_confirm">Download</string>
    <string name="versionchecklib_cancel">Cancel</string>
    <string name="menu_virtual_location">Virtual Location</string>
    <string name="menu_about">About</string>
    <string name="menu_reboot">Reboot</string>
    <string name="installing_tips">Installing %1$s…</string>
    <string name="update_success_tips">Update %1$s success!</string>
    <string name="install_success_tips">The Xposed module will not take effect until you enable it in XposedInstaller\'s module setting.</string>
    <string name="install_fail_tips">Install %1$s failed: %2$s</string>
    <string name="copy_right" translatable="false" >Copyright © %1$d</string>
    <string name="about_page_description">VirtualXposed is an app that provides the ability to use the Xposed module without needing root access, unlocking the bootloader, or modifying the system image.</string>
    <string name="about_feedback_qq_title">QQ Group (Click to copy group number)</string>
    <string name="about_feedback_wechat_title">WeChat Group (Click to copy)</string>
    <string name="about_feedback_tips">Group number has been copied to clipboard!</string>
    <string name="about_version_title">Version: %1$s</string>
    <string name="about_donate_title">Donate</string>
    <string name="reboot_tips_1">Reboot successfully!</string>
    <string name="reboot_tips_2">Reboot successfully!</string>
    <string name="reboot_tips_3">Reboot successfully!</string>
    <string name="meizu_device_tips_title">Detect Meizu Device: </string>
    <string name="meizu_device_tips_content">In Meizu OS phones, you can only add an app to VirtualXposed by cloning an existing app that\'s already installed (you cannot install an app in VirtualXposed via sideloading an apk). You must also install XposedInstaller manually, as, unlike installations on other Android phones, it isn\'t built in to VirtualXposed when installing on Meizu OS. Please install XposedInstaller first.</string>
    <string name="donate_alipay">Alipay</string>
    <string name="donate_wepay">Wechat Pay</string>
    <string name="prompt_alipay_not_found">Alipay not found.</string>
    <string name="prompt_wait">Wait just a moment…</string>
    <string name="donate_dialog_title">About Donate</string>
    <string name="donate_dialog_content">The maintaining of VirtualXposed costs lots of my time, if you appreciate my work, buy me a cup of coffee! :)</string>
    <string name="donate_dialog_yes">Donate</string>
    <string name="donate_dialog_no">Cancel</string>
    <string name="large_app_install_tips">Installation may take a while, please be patient… :)</string>
    <string name="about_icon_title">About Icon</string>
    <string name="about_icon_content">If you do not like my new icon, you are always welcome to design a new icon for VirtualXposed ;)</string>
    <string name="about_icon_yes">OK</string>
    <string name="create_shortcut_success">Shortcut created!</string>
    <string name="about_thanks">Credits</string>
    <string name="thanks_dialog_title">Credits</string>
    <string name="thanks_dialog_content" >Thanks Cheney for providing the awesome icon, and thank you Pei, Peggy, and too many others to list, for your hard work. Thanks for the ideas and suggestions you all provided, and special thanks to YingLin for taking the time to help me achieve my design :)</string>
    <string name="alert_for_doze_mode_title">Tips</string>
    <string name="alert_for_doze_mode_content">Please allow VirtualXposed to run in the background, otherwise you may not receive notifications from some virtual apps.</string>
    <string name="alert_for_doze_mode_yes">Allow</string>
    <string name="alert_for_doze_mode_no">Deny</string>
    <string name="about_faq_title">FAQ</string>
    <string name="clear_app">Clear\nData</string>
    <string name="stop_app">Force\nStop</string>
    <string name="home_menu_delete_title">Delete App</string>
    <string name="home_menu_delete_content">Do you want to delete %1$s ?</string>
    <string name="home_menu_clear_title" >Clear App Data</string>
    <string name="home_menu_clear_content" >Do you want to clear data of %1$s ?</string>
    <string name="home_menu_kill_title">Force Stop</string>
    <string name="home_menu_kill_content">Do you want to force stop %1$s ? This may cause unexpected app behaviours. </string>
    <string name="add_app_loading_tips">Parsing package for %1$s…</string>
    <string name="add_app_installing_tips">Installing %1$s…</string>
    <string name="add_app_loading_complete">%1$s successfully installed. </string>
    <string name="list_app_activity_install">Add to VirtualXposed</string>
    <string name="settings_about_text">About</string>
    <string name="settings_task_manage_text">Manage Tasks</string>
    <string name="settings_app_manage_text">Manage Apps</string>
    <string name="settings_desktop_text">Desktop Settings</string>
    <string name="app_manage_uninstall">Uninstall</string>
    <string name="app_manage_repair">Repair</string>
    <string name="settings_title">Settings</string>
    <string name="task_manage_uninstall">Kill Process</string>
    <string name="settings_reboot_title">Reboot VirtualXposed</string>
    <string name="settings_reboot_content">This will kill all apps currently running in VirtualXposed. Reboot anyway?</string>
    <string name="check_update">Check Update</string>
    <string name="version_is_latest">Latest version is installed.</string>
    <string name="new_version_detected">New Version:</string>
    <string name="multi_version_tip_title">Install tips</string>
    <string name="multi_version_tips_content">You have chosen an existing app. Do you want to install it as a separate app, or just update the existing one? \n(Installed version %1$s, Selected version: %2$s)</string>
    <string name="multi_version_multi">Install another one</string>
    <string name="multi_version_cover">Cover</string>
    <string name="multi_version_upgrade">Upgrade</string>
    <string name="multi_version_downgrade">Downgrade</string>
    <string name="app_manage_repair_failed_tips" >Sorry, repair failed; please re-install this app.</string>
    <string name="app_manage_repairing">Repairing…</string>
    <string name="app_manage_repair_success_title">Repair tips</string>
    <string name="app_manage_repair_success_content">Repair success; please force-stop VirtualXposed for it to take effect.</string>
    <string name="app_manage_repair_reboot_now">Reboot now</string>
    <string name="wallpaper_too_big_tips">The wallpaper choosen is too large and may increase the startup time, please choose a proper one.</string>
    <string name="create_shortcut_already_exist">This shortcut already exists</string>
    <string name="start_app_failed">Open app: %1$s failed.</string>
    <string name="app_manage_redirect_on">Open Storage Redirect</string>
    <string name="app_manage_redirect_off">Disable Storage Redirect</string>
    <string name="app_manage_redirect_desc">Storage Redirection redirects an application\'s access from the real SD card to a virtual SD card, which will prevent certain apps from creating directories in your real SD card; however, after the storage redirection is enabled, the application can no longer access the real SD card. Please select it when prompted.</string>
    <string name="app_manage_redirect_on_confirm">Open, Confirm</string>
    <string name="app_manage_redirect_off_confirm">Close, Confirm</string>
    <string name="shared_to_vxp">Share to App in VirtualXposed</string>
    <string name="shared_to_vxp_failed">Share failed, please try again.</string>
    <string name="app_installer_label">Add to VirtualXposed</string>
    <string name="install_complete">DONE</string>
    <string name="install_fail">Install failed: %1$s</string>
    <string name="install">Install</string>
    <string name="install_package">Install new app: %s</string>
    <string name="install_package_version_tips">You have chosen an existing app, \n(Installed version %1$s, selected version: %2$s). Install it?</string>
    <string name="settings_add_app_summary">Please add both the app and the Xposed module to VirtualXposed first, otherwise the Xposed module won\'t take effect.</string>
    <string name="settings_advance">Advanced Settings</string>
    <string name="advance_settings_hide_settings">Hide settings button on desktop</string>
    <string name="advance_settings_disable_installer">Disable apk installer for system</string>
    <string name="advance_settings_hide_settings_summary">If you can enter settings by the menu key on main activity, you can hide this; you may not be able to enter settings otherwise! \n(Restart VirtualXposed to take effect.)</string>
    <string name="advance_settings_disable_installer_summary">Do not show VirtualXposed\'s installer when you choose apk file in system</string>
    <string name="advance_settings_directly_back">Directly back</string>
    <string name="advance_settings_directly_back_summary">Go back to the system launcher instead of the virtual launcher when in a virtual app.\n(Restart VirtualXposed to take effect.)</string>
    <string name="install_self_eggs">Boy, your idea is promising :)</string>
    <string name="advance_settings_install_gms">Install/Uninstall Google Services</string>
    <string name="about_feedback_tel_title">Telegram Group: %1$s</string>
    <string name="advance_settings_copy_file">Copy File</string>
    <string name="about_website_title">Official website</string>
    <string name="about_feedback_title">Feedback</string>
    <string name="about_feedback_hint">Please specify your phone model, Android version, Xposed plugin, and version of the corresponding app, and then describe (in as much detail as possible) the problem you are experiencing, otherwise it is considered invalid feedback (because we can\'t effectively troubleshoot and fix said problem with only \"this app crashes\" ;) )</string>
    <string name="settings_plugin_recommend">Recommended Xposed Modules</string>
    <string name="advance_settings_disable_resident_notification">Disable persistent notification</string>
    <string name="advance_settings_disable_resident_notification_summary">Disable the persistent notification of VirtualXposed. (When disabled, VirtualXposed may be killed by the system frequently. Use with caution!)</string>
    <string name="settings_module_manage">Manage Xposed Module</string>
    <string name="settings_module_manage_summary">Enable/Disable Xposed module (You must enable it manually for it to take effect)</string>
    <string name="xposed_installer_not_found">Xposed Installer not found, please add it to VirtualXposed first!</string>
</resources>